  ================================================================================
  3440		Classfile comparator should be able to ignore order (1GL2I7E) 
  3439		Classfile comparator should be able to ignore synthetics (1GL2I3N) 
  3442		NPE in SourceElementParser (1GL496I)   

  PRs Closed in this Release
  ===============================================================================
  3279		Severe -  JM - Source found, even though sourcepath is false (1GELAVB)
  3288      CodeAssist - Code assist doesn't work in some methods (1GELEBH)
  5073      delete does not work on default package  
  3443      Unused argument/variable warnings shown twice (1GL4OW7)    

**********************************************************************************
*** BUILD 205 (2.0 STREAM, v_205) ************************************************
**********************************************************************************
  
  What's new in this drop
  ================================================================================
  * CodeAssist provides variable name suggestions. 
    (breaking) API Changes on ICompletionRequestor
    + Added API for suggest variable name:
      void acceptVariableName(
          char[] typePackageName,
          char[] typeName,
          char[] name,
          char[] completionName,
          int completionStart,
          int completionEnd);

  * Helper method for computing a resolved and expanded path (all exports from 
    prerequisites) which was introduced in 204, got removed. This is not an API 
    change, it never made it out officially.
    - IJavaProject.getExpandedClasspath(boolean)
                  
  * SearchEngine.createJavaSearchScope(IResource[]) has been deprecated.
  	Use SearchEngine.createJavaSearchScope(IJavaElement[]) instead.
  	The rational is that createJavaSearchScope(IResource[]) was not well
  	defined for projects, and it could not define a search scope for java