@@ -118,6 +118,7 @@ STREAM: 2.0
 
   PRs Closed in this Release
   ===============================================================================
+  3447      search: could automatically narrow down scope (1GLDJVN)  
   3279		Severe -  JM - Source found, even though sourcepath is false (1GELAVB)
   3288      CodeAssist - Code assist doesn't work in some methods (1GELEBH)
   5073      delete does not work on default package  
